--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "Brackets Link File",
     "description": "Easily insert links to javascript scripts and CSS files into focused HTML document. As well as include PHP files into focused PHP documents. Just right click on the file in the project tree -> Link File, and the link with the correct relative path will be inserted into the document.",
     "homepage": "https://github.com/pelatx/brackets-link-file",
-    "version": "1.0.1",
+    "version": "1.1.0",
     "author": "José A. Martínez <pelatx@gmail.com>",
     "license": "MIT",
     "keywords": [
@@ -11,7 +11,8 @@
         "css",
         "file",
         "link",
-        "php"
+        "php",
+        "image"
     ],
     "engines": {
         "brackets": ">=0.34.0"
