--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "pelatx.brackets-link-file",
     "title": "Brackets Link File",
-    "description": "Easily insert links to javascript scripts and CSS files into focused HTML document. As well as include PHP files into focused PHP documents. Just right click on the file in the project tree -> Link File, and the link with the correct relative path will be inserted into the document.",
+    "description": "Easily insert links to javascript scripts, CSS and image files, into focused HTML document. As well as include PHP files into PHP documents. New feature: right click on a directory in the project tree and you can select one or more supported files anywhere on your hard disk. These files will be automatically copied in this directory and linked in the focused document.",
     "homepage": "https://github.com/pelatx/brackets-link-file",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "author": "José A. Martínez <pelatx@gmail.com>",
     "license": "MIT",
     "keywords": [
@@ -12,7 +12,10 @@
         "file",
         "link",
         "php",
-        "image"
+        "image",
+        "project",
+        "copy files",
+        "tags"
     ],
     "engines": {
         "brackets": ">=0.34.0"
