--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "pelatx.brackets-link-file",
     "title": "Brackets Link File",
-    "description": "Easily insert links to javascript, CSS and image files, into focused HTML document. As well as include PHP files into PHP documents. New feature: right click on a directory in the project tree and you can select one or more files anywhere on your mounted volumes. These files will be automatically copied in this directory and linked in the focused document.",
+    "description": "Easily link your files (PHP, JavaScript, CSS, images) into the focused document (HTML, PHP, CSS). You can copy several files in one time to your project folders and get them tagged automatically in the current document. New: image previews in the files selection dialog.",
     "homepage": "https://github.com/pelatx/brackets-link-file",
-    "version": "1.2.0",
-    "author": "José A. Martínez <pelatx@gmail.com>",
+    "version": "1.3.0",
+    "author": "José A. Martínez <https://github.com/pelatx>",
     "license": "MIT",
     "keywords": [
         "javascript",
