--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "pelatx.brackets-link-file",
     "title": "Brackets Link File",
-    "description": "New: improved bi-directionality. Easily link your files (PHP, JavaScript, CSS, images, audio, video, fonts) into the focused document (HTML, PHP, CSS). It allows to copy several files in one time to any project folder or download from CDN and get them tagged automatically.",
+    "description": "New: jsDelivr API 2. Easily link your files (PHP, JavaScript, CSS, images, audio, video, fonts) into the focused document (HTML, PHP, CSS). It allows to copy several files in one time to any project folder or download from CDN and get them tagged automatically.",
     "homepage": "https://github.com/pelatx/brackets-link-file",
-    "version": "2.2.0",
+    "version": "2.3.0",
     "author": "José A. Martínez <https://github.com/pelatx>",
     "license": "MIT",
     "keywords": [
@@ -19,7 +19,9 @@
         "copy files",
         "tags",
         "drag",
-        "drop"
+        "drop",
+        "cdn",
+        "libraries"
     ],
     "engines": {
         "brackets": ">=0.34.0"
@@ -32,13 +34,13 @@
     ],
     "package-i18n": {
         "es": {
-            "description": "Nuevo: bidireccionalidad mejorada. Enlaza fácilmente tus archivos (PHP, JavaScript, CSS, imágenes, audio, video, fonts) al documento activo (HTML, PHP, CSS, fonts). Permite copiar varios archivos de una sola vez a qualquier directorio del proyecto o descárgalos de CDN y los tags serán insertados automáticamente."
+            "description": "Nuevo: jsDelivr API 2. Enlaza fácilmente tus archivos (PHP, JavaScript, CSS, imágenes, audio, video, fonts) al documento activo (HTML, PHP, CSS, fonts). Permite copiar varios archivos de una sola vez a qualquier directorio del proyecto o descárgalos de CDN y los tags serán insertados automáticamente."
         },
         "fr": {
-            "description": "Nouveau: biirectionnalité améliorée. Reliez facilement vos fichiers (PHP, JavaScript, CSS, images, audio, vidéo, fonts) au document actif (HTML, PHP, CSS). Vous pouvez copier plusieurs fichiers à la fois sur n'importe quel répertoire de projet ou les télécharger à partir de CDN et les tags seront insérés automatiquement."
+            "description": "Nouveau: jsDelivr API 2. Reliez facilement vos fichiers (PHP, JavaScript, CSS, images, audio, vidéo, fonts) au document actif (HTML, PHP, CSS). Vous pouvez copier plusieurs fichiers à la fois sur n'importe quel répertoire de projet ou les télécharger à partir de CDN et les tags seront insérés automatiquement."
         },
         "de": {
-            "description": "Neu: verbesserte Bidirektionalität. Verlinke schnell und einfach deine Dateien (PHP, JavaScript, CSS, Grafiken, Audio, Video, Fonts) in dem fokussierten Dokument (HTML, PHP, CSS). Außerdem kannst du mehrere Dateien gleichzeitig in jeden Projektordner kopieren oder von einem CDN herunterladen und sie werden automatisch getaggt."
+            "description": "Neu: jsDelivr API 2. Verlinke schnell und einfach deine Dateien (PHP, JavaScript, CSS, Grafiken, Audio, Video, Fonts) in dem fokussierten Dokument (HTML, PHP, CSS). Außerdem kannst du mehrere Dateien gleichzeitig in jeden Projektordner kopieren oder von einem CDN herunterladen und sie werden automatisch getaggt."
         }
     }
 }
