--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "pelatx.brackets-link-file",
     "title": "Brackets Link File",
-    "description": "New: preferences dialog. Easily link your files (PHP, JavaScript, CSS, images, audio, video, fonts) into the focused document (HTML, PHP, CSS). It allows to copy several files in one time to any project folder or download from CDN and get them tagged automatically.",
+    "description": "Easily link your files (PHP, JavaScript, CSS, images, audio, video, fonts) into the focused document (HTML, PHP, CSS). It allows to copy several files in one time to any project folder or download from CDN and get them tagged automatically.",
     "homepage": "https://github.com/pelatx/brackets-link-file",
-    "version": "2.4.1",
+    "version": "2.4.2",
     "author": "José A. Martínez <https://github.com/pelatx>",
     "license": "MIT",
     "keywords": [
@@ -34,13 +34,13 @@
     ],
     "package-i18n": {
         "es": {
-            "description": "Nuevo: dialogo de preferencias. Enlaza fácilmente tus archivos (PHP, JavaScript, CSS, imágenes, audio, video, fonts) al documento activo (HTML, PHP, CSS, fonts). Permite copiar varios archivos de una sola vez a qualquier directorio del proyecto o descárgalos de CDN y los tags serán insertados automáticamente."
+            "description": "Enlaza fácilmente tus archivos (PHP, JavaScript, CSS, imágenes, audio, video, fonts) al documento activo (HTML, PHP, CSS, fonts). Permite copiar varios archivos de una sola vez a qualquier directorio del proyecto o descárgalos de CDN y los tags serán insertados automáticamente."
         },
         "fr": {
-            "description": "Nouveau: dialogue de préférences. Reliez facilement vos fichiers (PHP, JavaScript, CSS, images, audio, vidéo, fonts) au document actif (HTML, PHP, CSS). Vous pouvez copier plusieurs fichiers à la fois sur n'importe quel répertoire de projet ou les télécharger à partir de CDN et les tags seront insérés automatiquement."
+            "description": "Reliez facilement vos fichiers (PHP, JavaScript, CSS, images, audio, vidéo, fonts) au document actif (HTML, PHP, CSS). Vous pouvez copier plusieurs fichiers à la fois sur n'importe quel répertoire de projet ou les télécharger à partir de CDN et les tags seront insérés automatiquement."
         },
         "de": {
-            "description": "Neu: Präferenzen Dialog. Verlinke schnell und einfach deine Dateien (PHP, JavaScript, CSS, Grafiken, Audio, Video, Fonts) in dem fokussierten Dokument (HTML, PHP, CSS). Außerdem kannst du mehrere Dateien gleichzeitig in jeden Projektordner kopieren oder von einem CDN herunterladen und sie werden automatisch getaggt."
+            "description": "Verlinke schnell und einfach deine Dateien (PHP, JavaScript, CSS, Grafiken, Audio, Video, Fonts) in dem fokussierten Dokument (HTML, PHP, CSS). Außerdem kannst du mehrere Dateien gleichzeitig in jeden Projektordner kopieren oder von einem CDN herunterladen und sie werden automatisch getaggt."
         }
     }
 }
